k8s/cpp-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cpp-app-service
spec:
  selector:
    app: cpp-app
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
