k8s/cpp-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cpp-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cpp-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cpp-app-service
                port:
                  number: 8080
